fixed minor findings